--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Craniosynostosis Visual Novel</title>
-  <link rel="stylesheet" href="../MRPCC/css/styles.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
         </header>
 
         <main class="main-content">
-            <img src="/MRPCC/img/images/Logo/CC-logo-colour-v002-01.png" alt="logo" class="main-icon">
+            <img src="/img/images/Logo/CC-logo-colour-v002-01.png" alt="logo" class="main-icon">
 
             <div class="content-stack">
                 <p class="intro-text">
@@ -58,7 +58,7 @@
 <!-- 
    <div id="chapter-nav-container-main"></div> -->
 
-<script src="/MRPCC/js/navigation/Menu_nav.js"></script> 
+<script src="/js/navigation/Menu_nav.js"></script> 
 <script src="js/main.js"></script>
 <script src="js/hamburgerMenu.js"></script>
 </body>
