--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tutorial</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 
 <body class="page-tutorial">
 <header id="top-bar">
     <a href="#" id="logo-menu-button" class="logo-menu-button">
-      <img src="/MRPCC/img/images/Logo/CC-logo-colour-v002-01.png" alt="Main Menu" /> </a>
+      <img src="/img/images/Logo/CC-logo-colour-v002-01.png" alt="Main Menu" /> </a>
 
     <div class="title-container">
       <div class="resource-title">Craniosynostosis Care</div>
@@ -77,12 +77,12 @@
 
 <!-- Scripts -->
 <!-- Main menu button -->
-<script src="../js/ui.js"></script>
+<script src="/js/ui.js"></script>
 <!-- Navigation bar -->
-<script src="/MRPCC/js/navigation/navigationmain.js"></script>
+<script src="/js/navigation/navigationmain.js"></script>
 
 <!-- !CHANGE -->
-<script src="../js/nonjourney/tutorial.js"></script>
+<script src="/js/nonjourney/tutorial.js"></script>
 
 
 </body>
