Added go back text to path selection page

--- a/path_selection.html
+++ b/path_selection.html
@@ -178,13 +178,24 @@
             position: absolute;
             top: 40%;
             left: 1rem;
-            width: 2rem;
-            height: 2rem;
+            width: auto;
             color: #1A4651;
             cursor: pointer;
             z-index: 10;
+            display: flex;
+            align-items: center;
+            gap: 0rem;
         }
         .back-arrow-button:hover{opacity: 0.6;}
+        .back-arrow-button h3 {
+            font-size: 1rem;
+            margin: 0;
+        }
+        .back-arrow-button svg {
+        flex-shrink: 0; /* Prevents the SVG from shrinking */
+        width: 4rem; /* Set a specific width for the SVG */
+        height: 4rem; /* Set a specific height for the SVG */
+        }   
 
     </style>
 </head>
@@ -194,6 +205,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" xml:space="preserve" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 298 511.93">
             <path fill-rule="nonzero" d="M285.77 441c16.24 16.17 16.32 42.46.15 58.7-16.16 16.24-42.45 16.32-58.69.16l-215-214.47c-16.24-16.16-16.32-42.45-.15-58.69L227.23 12.08c16.24-16.17 42.53-16.09 58.69.15 16.17 16.24 16.09 42.54-.15 58.7l-185.5 185.04L285.77 441z"/>
         </svg>
+        <h3> Go <br> Back </h3>
     </div>
 
     <div class="path-selection-header">
