Templates for additonal pages done

--- a/downloadables.html
+++ b/downloadables.html
@@ -435,54 +435,54 @@ header {
             <h1>Downloadable Resources</h1>
 
             <section class="download-section">
-                <h2>Patient Information Leaflets</h2>
+                <h2>General information</h2>
                 <div class="download-grid">
+                        <a href="path/to/consent_form.pdf" download class="download-item">
+                        <div class="download-icon-wrapper">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>Before surgery: General tips and information</h3>
+                        <p></p>
                     <a href="path/to/patient_guide.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
                             <i class="fas fa-file-pdf"></i>
                         </div>
-                        <h3>Patient Guide to Surgery</h3>
-                        <p>Comprehensive guide for patients undergoing surgical procedures.</p>
+                        <h3>Parent Guide to Surgery</h3>
+                        <p></p>
                     </a>
                     <a href="path/to/post_op_care.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
                             <i class="fas fa-file-pdf"></i>
                         </div>
-                        <h3>Post-Operative Care Instructions</h3>
+                        <h3>After surgery: General tips and Aftercare information</h3>
                         <p>Detailed instructions for recovery after surgery.</p>
                     </a>
-                    <a href="path/to/consent_form.pdf" download class="download-item">
-                        <div class="download-icon-wrapper">
-                            <i class="fas fa-file-pdf"></i>
-                        </div>
-                        <h3>Informed Consent Form</h3>
-                        <p>Standard consent form for medical procedures.</p>
+
                     </a>
                 </div>
             </section>
 
             <section class="download-section">
-                <h2>Surgical Diagrams & Images</h2>
+                <h2>Diagrams & Images</h2>
                 <div class="download-grid">
-                    <a href="path/to/brain_anatomy.jpg" download class="download-item">
-                        <img src="https://placehold.co/300x200/cce0eb/333?text=Brain+Anatomy" alt="Brain Anatomy Diagram" class="download-thumbnail">
-                        <h3>Brain Anatomy Diagram</h3>
-                        <p>High-resolution image illustrating brain structures.</p>
+                    <a href="/img/images/Non journey/Ch 2 j.png" download class="download-item">
+                        <img src="/img/images/Non journey/Ch 2 j.png" alt="Types of Craniosynostosis" class="download-thumbnail">
+                        <h3>Types of Craniosynostosis</h3>
                     </a>
-                    <a href="path/to/endoscope_view.png" download class="download-item">
-                        <img src="https://placehold.co/300x200/cce0eb/333?text=Endoscope+View" alt="Endoscopic View" class="download-thumbnail">
-                        <h3>Endoscopic View Example</h3>
-                        <p>Sample image from an endoscopic surgical procedure.</p>
+                    <a href="path/to/.png" download class="download-item">
+                        <img src="https://placehold.co/300x200/cce0eb/333?text=" alt="Other" class="download-thumbnail">
+                        <h3></h3>
+                        <p></p>
                     </a>
-                    <a href="path/to/surgical_instruments.jpg" download class="download-item">
-                        <img src="https://placehold.co/300x200/cce0eb/333?text=Surgical+Tools" alt="Surgical Instruments" class="download-thumbnail">
-                        <h3>Common Surgical Instruments</h3>
-                        <p>Visual guide to frequently used surgical tools.</p>
+                    <a href="path/to/.jpg" download class="download-item">
+                        <img src="https://placehold.co/300x200/cce0eb/333?text=" alt="Other" class="download-thumbnail">
+                        <h3></h3>
+                        <p></p>
                     </a>
                 </div>
             </section>
 
-            <section class="download-section">
+            <!-- <section class="download-section">
                 <h2>Research Papers & Articles</h2>
                 <div class="download-grid">
                     <a href="path/to/research_paper_1.pdf" download class="download-item">
@@ -500,7 +500,7 @@ header {
                         <p>An article discussing new developments in endoscopy.</p>
                     </a>
                 </div>
-            </section>
+            </section> -->
         </main>
     </div>
 
