--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -28,6 +28,17 @@
       </label>
       <span class="toggle-label">Cranial Vault</span>
     </div>
+     <div class="hamburger-menu">
+                <button id="hamburger-btn" class="hamburger-btn" aria-label="Open menu" aria-expanded="false">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button> 
+                <div id="menu-dropdown" class="menu-dropdown">
+                    <a href="./downloadables.html" class="menu-item">Downloadable Resources</a>
+                    <a href="./glossary.html" class="menu-item">Vocabulary Words</a>
+                    <a href="./resources.html" class="menu-item">Other Resources</a>
+                </div> 
   </header>
 
   <div class="chapter-container">
@@ -83,7 +94,7 @@
 
 <!-- !CHANGE -->
 <script src="/js/nonjourney/tutorial.js"></script>
-
+<script src="/js/hamburgerMenu.js"></script>
 
 </body>
 </html>
