Delete menu_nav and change some colours

--- a/path_selection.html
+++ b/path_selection.html
@@ -171,8 +171,8 @@
         
         /* ... Other button styles remain the same ... */
         .card-select-button1:hover, .card-select-button2:hover{transform: scale(1.1);}
-        .card-select-button1{background-color: #F39C12;color: white;}
-        .card-select-button1:hover{background-color: #E67E22;}
+        .card-select-button1{background-color: #2D6460;color: white;}
+        .card-select-button1:hover{background-color: #A9C384;}
         .card-select-button2{background-color: #6118d6;color: white;}
         .card-select-button2:hover{background-color: #ba9bdd;}
         .card-select-button1 svg, .card-select-button2 svg{width: 1em;height: 1em;}
@@ -186,7 +186,7 @@
             display: flex;
             align-items: center;
             gap: 0.5vw;
-            color: #1A4651;
+            color: #C85E00;
             cursor: pointer;
             z-index: 10;
             height: auto;
