hamburger menu fix and open new tab

--- a/resources.html
+++ b/resources.html
@@ -307,7 +307,7 @@ header {
             <div class="header-left">
                 </div>
             <div class="header-right">
-                <a href="index.html" class="back-button">Back</a>
+                <a href="index.html" class="back-button">Main Menu</a>
 
             <div class="hamburger-menu">
                 <button id="hamburger-btn" class="hamburger-btn" aria-label="Open menu" aria-expanded="false">
