--- a/downloadables.html
+++ b/downloadables.html
@@ -416,7 +416,7 @@ header {
                 <!-- You can add a placeholder for a logo or a simple text title here if desired -->
             </div>
             <div class="header-right">
-                <a href="index.html" class="back-button">Back</a>
+                <a href="index.html" class="back-button">Main Menu</a>
             <div class="hamburger-menu">
                 <button id="hamburger-btn" class="hamburger-btn" aria-label="Open menu" aria-expanded="false">
                     <span></span>
