--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <p class="intro-text">
                     This is a narrative based module that will teach you the basics of Endoscopic and Cranial Vault surgical journeys.
                 </p>
+                <h4>This resource is currently built for laptop or desktop use only not phone screens</h4>
                 <button class="btn btn-primary-orange" id="startbtn" onclick="startJourney()">Start</button>
             </div>
 
