Additonal pages and poster adjustments

--- a/downloadables.html
+++ b/downloadables.html
@@ -441,21 +441,21 @@ header {
                         <div class="download-icon-wrapper">
                             <i class="fas fa-file-pdf"></i>
                         </div>
-                        <h3>Before surgery: General tips and information</h3>
+                        <h3>Pdf 1</h3>
                         <p></p>
                     <a href="path/to/patient_guide.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
                             <i class="fas fa-file-pdf"></i>
                         </div>
-                        <h3>Parent Guide to Surgery</h3>
+                        <h3>Pdf 2</h3>
                         <p></p>
                     </a>
                     <a href="path/to/post_op_care.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
                             <i class="fas fa-file-pdf"></i>
                         </div>
-                        <h3>After surgery: General tips and Aftercare information</h3>
-                        <p>Detailed instructions for recovery after surgery.</p>
+                        <h3>Pdf 3</h3>
+                        <p>Summary of pdf 3</p>
                     </a>
 
                     </a>
