--- a/glossary.html
+++ b/glossary.html
@@ -571,16 +571,20 @@ header {
                 <h2 class="letter-heading">A</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Ablation:</span>
-                        <span class="glossary-definition">The removal or destruction of a body part or tissue or its function.</span>
+                        <span class="glossary-term">Ablation [ab-LAY-shun]:</span>
+                        <span class="glossary-definition">The removal of something, often a part of the body, by cutting or other surgical means.</span>
                     </li>
                     <li>
-                        <span class="glossary-term">Anesthesia:</span>
-                        <span class="glossary-definition">Loss of sensation or awareness, induced by drugs.</span>
+                        <span class="glossary-term">Abnormally [ab-NOR-muh-lee]:</span>
+                        <span class="glossary-definition">In a way that is not normal, usual, or typical.</span>
                     </li>
                     <li>
-                        <span class="glossary-term">Aneurysm:</span>
-                        <span class="glossary-definition">A localized, blood-filled balloon-like bulge in the wall of a blood vessel.</span>
+                        <span class="glossary-term">Adolescents [ad-uh-LES-ents]:</span>
+                        <span class="glossary-definition">Teenagers, or young people who are no longer children but not yet adults.</span>
+                    </li>
+                    <li>
+                        <span class="glossary-term">Anesthesia [an-es-THEE-zhuh]:</span>
+                        <span class="glossary-definition">Medicine given to prevent pain during surgery or to make a person go to sleep during a medical procedure.</span>
                     </li>
                     </ul>
             </div>
@@ -589,13 +593,13 @@ header {
                 <h2 class="letter-heading">B</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Biopsy:</span>
-                        <span class="glossary-definition">An examination of tissue removed from a living body to discover the presence, cause, or extent of a disease.</span>
+                        <span class="glossary-term">Brachycephaly [brak-ee-SEF-uh-lee]:</span>
+                        <span class="glossary-definition">A condition where a baby's head is unusually flat at the back, can be either positional/deformational (sutures are still open) or synostosis (sutures have fused).</span>
                     </li>
-                    <li>
+                    <!-- <li>
                         <span class="glossary-term">Brainstem:</span>
                         <span class="glossary-definition">The central trunk of the mammalian brain, consisting of the medulla oblongata, pons, and midbrain, and continuing downward to form the spinal cord.</span>
-                    </li>
+                    </li> -->
                     </ul>
             </div>
 
