--- a/resources.html
+++ b/resources.html
@@ -330,27 +330,27 @@ header {
             <section class="resource-section">
                 <h2>Information from Hospitals</h2>
                 <ul>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
                 </ul>
             </section>
 
             <section class="resource-section">
                 <h2>Support Pages</h2>
                 <ul>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
                 </ul>
             </section>
 
             <section class="resource-section">
                 <h2>Patient Stories</h2>
                 <ul>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
-                    <li><a href="" target="_blank">TEXT</a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
                 </ul>
             </section>
 
