--- a/path_selection.html
+++ b/path_selection.html
@@ -77,10 +77,10 @@
             
             /* KEY CHANGE 1: Make the card scalable */
             width: 45%; /* Use percentage to make the card scale with its container */
-            max-width: 400px; /* Optional: prevent it from getting too large */
+            max-width: 30vw; /* Optional: prevent it from getting too large */
             min-width: 300px; /* Prevent it from getting too squished */
 
-            max-height: 450px;
+            max-height: 80vh; /* Optional: prevent it from getting too tall */
             overflow: hidden;
 
             /* KEY CHANGE 2: Define this element as a query container */
@@ -122,7 +122,7 @@
             flex-grow: 1; 
             display: flex;
             flex-direction: column;
-            overflow: hidden;
+            overflow-y: auto; ;
             min-height: 0;
         }
 
@@ -232,7 +232,7 @@
                     <h2>Endoscopic Strip Craniectomy</h2>
                     <p class="surgery-subtitle">Surgery before 4 months old</p>
                     <p class="description">
-                        This surgery is <strong>minimally invasive</strong> where 2 small cuts are made on the child's head. It requires <strong> after care</strong> (many in-person check ups and helmet care).
+                        This surgery is <strong>minimally invasive</strong> where 2 small cuts are made on the child's head. It requires <strong> prolonged care over several checkups and helmet assessments.</strong> The skull will slowly change shape as it grows.
                     </p>
                 </div>
                 <button class="card-select-button1" id="selectEndoscopicPath" aria-label="Select Endoscopic Strip Craniectomy">
@@ -255,7 +255,7 @@
                     <h2>Cranial Vault Reshaping</h2>
                     <p class="surgery-subtitle">Surgery typically before 12 months old</p>
                     <p class="description">
-                        This is a <strong>more invasive surgery</strong> that remodels the skull. It requires <strong>less intensive aftercare</strong> and less in-person check ups.
+                        This is a <strong>more invasive surgery</strong> that remodels the skull. It requires <strong>intensive aftercare for a short period.</strong> It results in an immediate change to the skull shape needing less checkups and no helmet.
                     </p>
                 </div>
                  <button class="card-select-button2" id="selectCranialVaultPath" aria-label="Select Cranial Vault Reshaping">
