fix chapter 6 back button

--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
                             <h3>Stefanie Jinyin Wang</h3>
                             <h4>BA&Sc, MSCBMC</h4>
                             <p>Medical Illustrator and Developer</p>
-                            <p>Contact:</p>
+                            <p></p>
                         </div>
                         <div class="team-member">
                             <img src="https://via.placeholder.com/150" alt="Team Member 2" class="team-portrait">
                             <h3>Dr. Shelley Wall</h3>
                             <h4>AOCAD, MScBMC, PhD, CMI, FAMI</h4>
                             <p>Supervisor, Associate Director and Associate Professor</p>
-                            <p>Contact:</p> </div>
+                            <p></p> </div>
                         <div class="team-member">
                             <img src="https://via.placeholder.com/150" alt="Team Member 3" class="team-portrait">
                             <h3>Dr. Christopher R. Forrest</h3>
                             <h4>MD, MSc, FRCSC, FACS, FAAP</h4>
                             <p>Content Advisor, Surgeon-Investigator </p>
-                            <p>Contact:</p> </div>
+                            <p></p> </div>
                     </div>
                 </div>
             </div>
