fix spelling mistake

--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="static-tooltip-container arrow-right" style="right: 100px; top: 205px;">
-            <div class="static-tooltip-content">Nagivate to the next page.</div>
+            <div class="static-tooltip-content">Navigate to the next page.</div>
         </div>
     </div>
     <header id="top-bar">
