hamburger menu appear above tooltips

--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -12,7 +12,7 @@
 <body class="page-tutorial">
 
         <div id="tooltip-fixed-overlay">
-        <div class="static-tooltip-container arrow-left" style="left: 80px; top: 10px; --arrow-vertical-offset: 30%;">
+        <div class="static-tooltip-container arrow-top" style="left: 10px; top: 55px; --arrow-horizontal-offset: 10%;">
             <div class="static-tooltip-content">Click logo to return to Main Menu.</div>
         </div>
 
