Updating chapter 5 to have link and change title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Craniosynostosis Visual Novel</title>
+    <title>Craniosynostosis Care</title>
     <link rel="stylesheet" href="/css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,7 +67,7 @@
                 <p class="intro-text">
                     This is a narrative based module that will teach you the basics of Endoscopic and Cranial Vault surgical journeys.
                 </p>
-                <h4>This resource is currently built for laptop or desktop use only not phone screens</h4>
+                <h4>This resource is currently optimized for laptop or desktop use only.</h4>
                 <button class="btn btn-primary-orange" id="startbtn" onclick="startJourney()">Start</button>
             </div>
 
