--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -10,9 +10,12 @@
 
 
 <body class="page-tutorial">
-
+        <div class="static-title-container">
+            <h2>This is a tutorial page. Click the next arrow to keep going.</h2>
+        </div>
+   
         <div id="tooltip-fixed-overlay">
-        <div class="static-tooltip-container arrow-top" style="left: 10px; top: 55px; --arrow-horizontal-offset: 10%;">
+        <div class="static-tooltip-container arrow-top" style="left: 10px; top: 60px; --arrow-horizontal-offset: 10%;">
             <div class="static-tooltip-content">Click logo to return to Main Menu.</div>
         </div>
 
