Fixing the path selection arrows

--- a/path_selection.html
+++ b/path_selection.html
@@ -182,18 +182,18 @@
         }
 
          .card-select-button1:hover{
-        background-image: url('/img/images/Non journey/CVPath-arrow.png'); /* Path to your default PNG */
+        background-image: url('/img/images/Non journey/EPath-arrow-hover.png'); /* Path to your default PNG */
         }
          .card-select-button2:hover{
-        background-color: #A9C384;
+        background-image: url('/img/images/Non journey/CVPath-arrow-hover.png'); /* Path to your default PNG */
         }
         /* ... Other button styles remain the same ... */
-        .card-select-button1:hover, .card-select-button2:hover{transform: scale(1.1);}
+        /* .card-select-button1:hover, .card-select-button2:hover{transform: scale(1.1);}
         .card-select-button1{background-color: #2D6460;color: white;}
         .card-select-button1:hover{background-color: #A9C384;}
         .card-select-button2{background-color: #6118d6;color: white;}
         .card-select-button2:hover{background-color: #ba9bdd;}
-        .card-select-button1 svg, .card-select-button2 svg{width: 1em;height: 1em;}
+        .card-select-button1 svg, .card-select-button2 svg{width: 1em;height: 1em;} */
 
         /* --- BACK ARROW --- */
         .back-arrow-button {
